--- a/index.jade
+++ b/index.jade
@@ -10,9 +10,9 @@ html
 		#enterSite
 			.flex.rows
 				.intro.flex.flex--center.align-center.columns.unit
-					h1.introd Introducing
-					h1.logo oyp
-					span.enter Enter Site
+					h1.introd.item Introducing
+					h1.logo.item oyp
+					span.enter.item Enter Site
 				.pics.unit
 		.main-body
 			nav.global
@@ -29,6 +29,7 @@ html
 							span Home
 						a(href="")
 							span Home
+						a.back(href="") back
 			section.lockup.flex.flex--center.align-center.rows
 				.flex-unit.flex.flex--start.align-center.columns(data-id='1')
 					h3 EDITORIAL
@@ -50,12 +51,12 @@ html
 				.flex-grid.flex.rows
 					.col.columns.flex
 						.row.flex.rows
-							.pic-small
-							.pic-small
+							.pic.pic-small
+							.pic.pic-small
 						.row.flex
-							.lrg
+							.pic.lrg
 						.row.flex.columns
-					.col.lrg-pic
+					.col.pic.lrg-pic
 						
 
 				
