--- a/css/_enterSite.sass
+++ b/css/_enterSite.sass
@@ -7,7 +7,10 @@
     flex: 1
     width: 100%
     height: 100%
+
   .intro
+    .item
+      opacity: 0
     h1.introd
       letter-spacing: 25px
       font-size: 50px
