--- a/css/_editorials.sass
+++ b/css/_editorials.sass
@@ -25,7 +25,7 @@
       height: 400px
       background: purple
       .pic-small
-        flex: 1
+        width: 50%
         background: blue
         height: 100%
         margin: 10px
@@ -38,3 +38,20 @@
         height: 80px
         background: yellow
         margin: 1px
+  .btn-locker
+    margin-top: 40px
+    margin-bottom: 30px
+    .btn
+      background: white
+      text-transform: uppercase
+      color: black
+      padding: 10px 60px
+      border: 3px solid black
+      font-weight: bold
+      transition: .54s ease all
+      margin-left: 20px
+      &:hover
+        background: black
+        cursor: pointer
+        letter-spacing: 3px
+        color: white
