--- a/index.jade
+++ b/index.jade
@@ -31,23 +31,20 @@ html
 							span Home
 						a.back(href="") back
 			section.lockup.flex.flex--center.align-center.rows
-				.flex-unit.flex.flex--start.align-center.columns(data-id='1')
-					h3 EDITORIAL
-					a(href="")
-						span portait
-				.flex-unit.flex.flex--start.align-center.columns(data-id='2')
+				.flex-unit.flex.flex--center.align-center.columns.edit(data-id='1')
+					h3 people
+				
+				.flex-unit.flex.flex--center.align-center.columns.land(data-id='2')
 					h3 landscapes
-					a(href="")
-						span portait
-				.flex-unit.flex.flex--start.align-center.columns(data-id='3')
-					h3 portfolio
-					a(href="")
-						span portait	
+				
+				.flex-unit.flex.flex--center.align-center.columns.port(data-id='3')
+					h3 mixed
+			
 		.editorials
 			.flex.flex--center.align-center.columns
 				.title.flex.flex--center.align-center.columns
 					i.fa.fa-arrow-left <span>Back to selection</span>
-					h1 Editorials 
+					h1 People 
 					.btn-locker.flex.flex--center.align-center.rows
 						.btn.btn-accepted
 							span Accepted
