--- a/css/_lockup.sass
+++ b/css/_lockup.sass
@@ -2,18 +2,31 @@ section.lockup
   .flex-unit
     flex: 1
     padding: 30px
-    background: black
     height: 900px
     margin: 10px
     color: white
     transition: .56s ease all
+    border-radius: 10px
     &:hover
       transform: scale(1.02)
-
-    h3
-      text-transform: uppercase
-      font-size: 40px
-      font-weight: 300
+  .edit
+    background: url("https://images.unsplash.com/photo-1499996860823-5214fcc65f8f?dpr=0.75&auto=format&fit=crop&w=1500&h=1867&q=80&cs=tinysrgb&crop=")
+      size: cover
+      position: center center
+  .land
+    background: url('https://images.unsplash.com/photo-1497107261019-ad37b3b579ee?dpr=0.75&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=')
+      size: cover
+      position: center center
+  .port
+    background: url("https://images.unsplash.com/photo-1489440543286-a69330151c0b?dpr=0.75&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=")
+      size: cover
+      position: center center
+  h3
+    text-transform: uppercase
+    font-size: 40px
+    font-weight: 300
+    background: black
+    padding: 5px 20px
     a
       color: red
       text-transform: uppercase
