each page complete

--- a/css/_landscapes.sass
+++ b/css/_landscapes.sass
@@ -1,4 +1,4 @@
-.editorials
+.landscapes
   h1
     text-transform: uppercase
   .fa
@@ -23,7 +23,7 @@
       height: 400px
 
       .pic-small
-      width: 50%
+        width: 50%
 
         height: 100%
         margin: 10px
