--- a/css/_lockup.sass
+++ b/css/_lockup.sass
@@ -8,7 +8,8 @@ section.lockup
     transition: .56s ease all
     border-radius: 10px
     &:hover
-      transform: scale(1.02)
+      transform: scale(1.07)
+      cursor: pointer
   .edit
     background: url("https://images.unsplash.com/photo-1499996860823-5214fcc65f8f?dpr=0.75&auto=format&fit=crop&w=1500&h=1867&q=80&cs=tinysrgb&crop=")
       size: cover
