--- a/css/master.css
+++ b/css/master.css
@@ -172,9 +172,10 @@ section.lockup .flex-unit {
   transition: .56s ease all;
   border-radius: 10px; }
   section.lockup .flex-unit:hover {
-    -webkit-transform: scale(1.02);
-    -ms-transform: scale(1.02);
-    transform: scale(1.02); }
+    -webkit-transform: scale(1.07);
+    -ms-transform: scale(1.07);
+    transform: scale(1.07);
+    cursor: pointer; }
 
 section.lockup .edit {
   background: url("https://images.unsplash.com/photo-1499996860823-5214fcc65f8f?dpr=0.75&auto=format&fit=crop&w=1500&h=1867&q=80&cs=tinysrgb&crop=");
@@ -232,11 +233,10 @@ section.lockup h3 {
     height: 100%; }
   .editorials .flex-grid .row {
     width: 100%;
-    height: 400px; }
-    .editorials .flex-grid .row .pic-small {
-      width: 50%;
-      height: 100%;
-      margin: 10px; }
+    height: 400px;
+    width: 50%;
+      width-height: 100%;
+      width-margin: 10px; }
     .editorials .flex-grid .row .lrg {
       width: 100%;
       height: 100%; }
@@ -263,6 +263,130 @@ section.lockup h3 {
     transition: .54s ease all;
     margin-left: 20px; }
     .editorials .btn-locker .btn:hover {
+      background: black;
+      cursor: pointer;
+      letter-spacing: 3px;
+      color: white; }
+
+.landscapes h1 {
+  text-transform: uppercase; }
+
+.landscapes .fa {
+  font-size: 20px;
+  padding: 10px; }
+  .landscapes .fa:hover {
+    cursor: pointer; }
+  .landscapes .fa span {
+    font-family: "Raleway",sans-serif;
+    font-weight: bold;
+    padding: 10px; }
+
+.landscapes .flex-grid {
+  width: 2000px;
+  height: 1200px;
+  margin-top: 50px; }
+  .landscapes .flex-grid .col {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    margin: 1px;
+    height: 100%; }
+  .landscapes .flex-grid .row {
+    width: 100%;
+    height: 400px; }
+    .landscapes .flex-grid .row .pic-small {
+      width: 50%;
+      height: 100%;
+      margin: 10px; }
+    .landscapes .flex-grid .row .lrg {
+      width: 100%;
+      height: 100%; }
+    .landscapes .flex-grid .row .pics {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+      height: 80px;
+      margin: 1px; }
+
+.landscapes .btn-locker {
+  margin-top: 40px;
+  margin-bottom: 30px; }
+  .landscapes .btn-locker .btn {
+    background: white;
+    text-transform: uppercase;
+    color: black;
+    padding: 10px 60px;
+    border: 3px solid black;
+    font-weight: bold;
+    -webkit-transition: .54s ease all;
+    -o-transition: .54s ease all;
+    transition: .54s ease all;
+    margin-left: 20px; }
+    .landscapes .btn-locker .btn:hover {
+      background: black;
+      cursor: pointer;
+      letter-spacing: 3px;
+      color: white; }
+
+.mixed h1 {
+  text-transform: uppercase; }
+
+.mixed .fa {
+  font-size: 20px;
+  padding: 10px; }
+  .mixed .fa:hover {
+    cursor: pointer; }
+  .mixed .fa span {
+    font-family: "Raleway",sans-serif;
+    font-weight: bold;
+    padding: 10px; }
+
+.mixed .flex-grid {
+  width: 2000px;
+  height: 1200px;
+  margin-top: 50px; }
+  .mixed .flex-grid .col {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    margin: 1px;
+    height: 100%; }
+  .mixed .flex-grid .row {
+    width: 100%;
+    height: 400px; }
+    .mixed .flex-grid .row .pic-small {
+      width: 50%;
+      height: 100%;
+      margin: 10px; }
+    .mixed .flex-grid .row .lrg {
+      width: 100%;
+      height: 100%; }
+    .mixed .flex-grid .row .pics {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+      height: 80px;
+      margin: 1px; }
+
+.mixed .btn-locker {
+  margin-top: 40px;
+  margin-bottom: 30px; }
+  .mixed .btn-locker .btn {
+    background: white;
+    text-transform: uppercase;
+    color: black;
+    padding: 10px 60px;
+    border: 3px solid black;
+    font-weight: bold;
+    -webkit-transition: .54s ease all;
+    -o-transition: .54s ease all;
+    transition: .54s ease all;
+    margin-left: 20px; }
+    .mixed .btn-locker .btn:hover {
       background: black;
       cursor: pointer;
       letter-spacing: 3px;
