--- a/index.jade
+++ b/index.jade
@@ -62,5 +62,46 @@ html
 						.row.flex.columns
 					.col.pic.lrg-pic
 						
-
+		.mixed
+			.flex.flex--center.align-center.columns
+				.title.flex.flex--center.align-center.columns
+					i.fa.fa-arrow-left <span>Back to selection</span>
+					h1 Mixed 
+					.btn-locker.flex.flex--center.align-center.rows
+						.btn.btn-accepted
+							span Accepted
+						.btn.btn-all
+							span All
+						.btn.btn-rejected
+							span REJECTED
+				.flex-grid.flex.rows
+					.col.columns.flex
+						.row.flex.rows
+							.pic.pic-small(data-state="accepted")
+							.pic.pic-small(data-state="unaccepted")
+						.row.flex
+							.pic.lrg
+						.row.flex.columns
+					.col.pic.lrg-pic
+		.landscapes
+			.flex.flex--center.align-center.columns
+				.title.flex.flex--center.align-center.columns
+					i.fa.fa-arrow-left <span>Back to selection</span>
+					h1 Landscapes 
+					.btn-locker.flex.flex--center.align-center.rows
+						.btn.btn-accepted
+							span Accepted
+						.btn.btn-all
+							span All
+						.btn.btn-rejected
+							span REJECTED
+				.flex-grid.flex.rows
+					.col.columns.flex
+						.row.flex.rows
+							.pic.pic-small(data-state="accepted")
+							.pic.pic-small(data-state="unaccepted")
+						.row.flex
+							.pic.lrg
+						.row.flex.columns
+					.col.pic.lrg-pic
 				
