--- a/css/_editorials.sass
+++ b/css/_editorials.sass
@@ -1,4 +1,8 @@
 .editorials
+  .pic-small
+    width: 50%
+    margin: 10px
+    height: 200px
   h1
     text-transform: uppercase
   .fa
@@ -23,7 +27,7 @@
       height: 400px
 
       .pic-small
-      width: 50%
+        width: 50%
 
         height: 100%
         margin: 10px
