--- a/index.jade
+++ b/index.jade
@@ -13,7 +13,8 @@ html
 					h1.introd.item Introducing
 					h1.logo.item oyp
 					span.enter.item Enter Site
-				.pics.unit
+				.wrapper
+					.pics.unit
 		.main-body
 			nav.global
 				.flex.flex--space-around.align-center.rows
@@ -32,7 +33,7 @@ html
 						a.back(href="") back
 			section.lockup.flex.flex--center.align-center.rows
 				.flex-unit.flex.flex--center.align-center.columns.edit(data-id='1')
-					h3 people
+					h3 People
 				
 				.flex-unit.flex.flex--center.align-center.columns.land(data-id='2')
 					h3 landscapes
@@ -44,7 +45,7 @@ html
 			.flex.flex--center.align-center.columns
 				.title.flex.flex--center.align-center.columns
 					i.fa.fa-arrow-left <span>Back to selection</span>
-					h1 People 
+					h1.head-title People
 					.btn-locker.flex.flex--center.align-center.rows
 						.btn.btn-accepted
 							span Accepted
@@ -66,7 +67,7 @@ html
 			.flex.flex--center.align-center.columns
 				.title.flex.flex--center.align-center.columns
 					i.fa.fa-arrow-left <span>Back to selection</span>
-					h1 Mixed 
+					h1.head-title Mixed 
 					.btn-locker.flex.flex--center.align-center.rows
 						.btn.btn-accepted
 							span Accepted
@@ -87,7 +88,7 @@ html
 			.flex.flex--center.align-center.columns
 				.title.flex.flex--center.align-center.columns
 					i.fa.fa-arrow-left <span>Back to selection</span>
-					h1 Landscapes 
+					h1.head-title Landscapes 
 					.btn-locker.flex.flex--center.align-center.rows
 						.btn.btn-accepted
 							span Accepted
