--- a/css/_enterSite.sass
+++ b/css/_enterSite.sass
@@ -1,8 +1,19 @@
 #enterSite
   width: 100%
   height: 100%
-  .pics
-    background: black
+  .wrapper
+    flex: 1
+    overflow: hidden
+    .pics
+      background: url('https://i.imgur.com/Dvz9soK.jpg')
+        size: cover
+        position: center center
+      transition: .56s ease all
+      filter: grayscale(1)
+      &:hover
+        filter: grayscale(0)
+      animation: zoom 50s
+
   .unit
     flex: 1
     width: 100%
