--- a/css/_editorials.sass
+++ b/css/_editorials.sass
@@ -3,6 +3,8 @@
     width: 50%
     margin: 10px
     height: 200px
+		transition: .56s ease positioon
+	
   h1
     text-transform: uppercase
   .fa
