--- a/css/_main-body.sass
+++ b/css/_main-body.sass
@@ -14,13 +14,16 @@ nav.global
     letter-spacing: -2px
 
   .link
-    a
+    span
       font-weight: bold
       text-transform: uppercase
       letter-spacing: 2px
       font-size: 20px
       padding: 10px
       text-decoration: none
+      color: black
+      &:hover
+        cursor: pointer
 @import "lockup"
 @import "editorials"
 @import "landscapes"
