--- a/index.jade
+++ b/index.jade
@@ -7,6 +7,11 @@ html
 			
 
 	body
+		.back-drop.flex.flex--center.align-center
+				.about-me.flex.flex--center.align-center.columns
+					h1 Hi my name is Phillip
+					p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem reiciendis repellat ipsam quaerat consequuntur aliquam eum repellendus perferendis numquam ducimus modi praesentium iusto, rerum. Perferendis, atque illum porro veniam quam.
+					span.closer Close
 		#enterSite
 			.flex.rows
 				.intro.flex.flex--center.align-center.columns.unit
@@ -20,17 +25,9 @@ html
 				.flex.flex--space-around.align-center.rows
 					h1.logo oyp
 					.link.flex.flex--center.align-center.rows
-						a(href="")
-							span Home
-						a(href="")
-							span photos
-						a(href="")
-							span Home
-						a(href="")
-							span Home
-						a(href="")
-							span Home
-						a.back(href="") back
+						span.about About Me
+						span photos
+						span.site-intro Site intro
 			section.lockup.flex.flex--center.align-center.rows
 				.flex-unit.flex.flex--center.align-center.columns.edit(data-id='1')
 					h3 People
