--- a/css/_lockup.sass
+++ b/css/_lockup.sass
@@ -1,16 +1,39 @@
 section.lockup
+  margin: 0
+  padding: 0
   .flex-unit
     flex: 1
     padding: 30px
-    height: 900px
-    margin: 10px
+    height: 398px
     color: white
     transition: .56s ease all
-    border-radius: 10px
     &:hover
       transform: scale(1.01)
       cursor: pointer
       filter: grayscale(1)
+  .container
+    width: 100%
+  .about-section
+    background: white
+    padding: 100px
+    color: black
+    width: 100%
+    h1
+      font-size: 40px
+      letter-spacing: 10px
+      text-transform: uppercase
+      color: #555
+
+
+    p
+      font-size: 30px
+      width: 2000px
+      line-height: 2em
+      font-weight: 300
+      padding: 50px
+      font-family: "Lato",sans-serif
+
+
   .edit
     background: url("https://images.unsplash.com/photo-1499996860823-5214fcc65f8f?dpr=0.75&auto=format&fit=crop&w=1500&h=1867&q=80&cs=tinysrgb&crop=")
       size: cover
