--- a/css/_about-me.sass
+++ b/css/_about-me.sass
@@ -1,14 +1,17 @@
 .back-drop
 	position: fixed
-	background: rgba(0,0,0,0.8)
+	background: rgba(0,0,0,0.9)
 	width: 100%
 	height: 100%
+
 	.about-me
 		background: white
 		padding: 80px
 		border: none
 		outline: none
-		border-radius: 10px
+		outline: 4px solid white
+		outline-offset: 10px
+
 		h1
 			text-transform: uppercase
 			letter-spacing: 5px
@@ -34,7 +37,3 @@
 				cursor: pointer
 				background: white
 				color: black
-				
-				
-			
-	
