--- a/css/_editorials.sass
+++ b/css/_editorials.sass
@@ -1,10 +1,4 @@
 .editorials
-  .pic-small
-    width: 50%
-    margin: 10px
-    height: 200px
-		transition: .56s ease positioon
-	
   h1
     text-transform: uppercase
   .fa
@@ -20,27 +14,58 @@
     width: 2000px
     height: 1200px
     margin-top: 50px
+
     .col
       flex: 1
-      margin: 1px
+      margin: 10px
       height: 100%
-    .row
-      width: 100%
-      height: 400px
+      background-size: cover
+      background-position: center center
 
-      .pic-small
-        width: 50%
+      .pic
+        &:hover
+          .overlay
+            opacity: 1
+        .overlay
+          position: absolute
+          top: 0
+          right: 0
+          left: 0
+          bottom: 0
+          background: rgba(0,0,0,0.9)
+          color: white
+          opacity: 0
+          transition: .56s ease all
+          .btm
+            bottom: 0px
+            background: rgba(255,255,255,0.7)
+            left: 0
+            right: 0
+            color: #999
+          h1
+            color: white
+            text-transform: uppercase
+            letter-spacing: 3px
+            font-size: 20px
 
+      .lrg-pic
         height: 100%
-        margin: 10px
-      .lrg
+        background-size: cover
+        background-position: center center
         width: 100%
-        height: 100%
+      .row
+        width: 100%
+        height: 400px
+        margin: 10px
 
-      .pics
-        flex: 1
-        height: 80px
-        margin: 1px
+        .pic-small
+          width: 50%
+          height: 100%
+          background-size: cover
+          background-position: center center
+          &:nth-of-type(2)
+            margin-left: 10px
+
   .btn-locker
     margin-top: 40px
     margin-bottom: 30px
