--- a/css/_mixed.sass
+++ b/css/_mixed.sass
@@ -14,27 +14,31 @@
     width: 2000px
     height: 1200px
     margin-top: 50px
+
     .col
       flex: 1
-      margin: 1px
+      margin: 10px
       height: 100%
-    .row
-      width: 100%
-      height: 400px
-
-      .pic-small
-        width: 50%
-
+      background-size: cover
+      background-position: center center
+      .lrg-pic
         height: 100%
-        margin: 10px
-      .lrg
+        background-size: cover
+        background-position: center center
         width: 100%
-        height: 100%
+      .row
+        width: 100%
+        height: 400px
+        margin: 10px
 
-      .pics
-        flex: 1
-        height: 80px
-        margin: 1px
+        .pic-small
+          width: 50%
+          height: 100%
+          background-size: cover
+          background-position: center center
+          &:nth-of-type(2)
+            margin-left: 10px
+
   .btn-locker
     margin-top: 40px
     margin-bottom: 30px
